--- a/myfirstweb/my.first-web.html
+++ b/myfirstweb/my.first-web.html
@@ -4,7 +4,8 @@
         <mata name="viewport" content="width=device-widh,initial-scale=1.0"/>
         <mata charest="ut-8"/>
         <title>My first Web</title>
-        <link rel="stylesheet" type="text/css" href="my-first-web.css"/> 
+        <link rel="stylesheet" type="text/css" href="my-first-web.css"/>
+        <base target="_blank"/><head><base target="_blank"></head>
     </head>
     <body>
         <div class="title" >1.兩百字內的個人簡介</div>
@@ -21,9 +22,9 @@
             學著掌控時間，同時兼顧課業與工作和自學所以在時間的安排上很緊湊，
             學速打和一些電腦知識，因為對電腦很不敏感有些障礙，
             試著學習語言掌握用法和框架。
-            https://milkfishsoup.github.io/date2.githud.io/JS_date/date.html
-            https://milkfishsoup.github.io/toggle.githud.io/Js_Toggle/toggle.html
-            https://milkfishsoup.github.io/watch.githud.io/watch/watch.html
+            <a href="https://milkfishsoup.github.io/date2.githud.io/JS_date/date.html"  alt="日歷設計">日歷設計</a>
+            <a href="https://milkfishsoup.github.io/toggle.githud.io/Js_Toggle/toggle.html" alt="模式切換">模式切換</a>
+            <a href="https://milkfishsoup.github.io/watch.githud.io/watch/watch.html"  alt="簡易網頁製作">簡易網頁製作</a>
 
         </div>
 
